vpc with cm ec2.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "AWS CloudFormation VPC  .",
	"Mappings": {
		"RegionMap": {
			"us-east-1": {
				"AMI": "ami-500d8546"
			},
			"us-west-1": {
				"AMI": "ami-252a0f45"
			}
		}
	},
	"Parameters": {
		"SSHKey": {
			"Default": "",
			"Description": "The SSH key to install on the instance.",
			"Type": "AWS::EC2::KeyPair::KeyName"
		}
	},
	"Resources": {
		"VPC": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": "10.0.0.0/16",
				"Tags": [{
					"Key": "Application",
					"Value": {
						"Ref": "AWS::StackId"
					}
				}]
			}
		},
		"SecurityGroup": {
			"Properties": {
				"GroupDescription": "Security Group",
				"SecurityGroupIngress": [{
						"CidrIp": "0.0.0.0/0",
						"FromPort": "22",
						"IpProtocol": "tcp",
						"ToPort": "22"
					},
					{
						"CidrIp": "0.0.0.0/0",
						"FromPort": "80",
						"IpProtocol": "tcp",
						"ToPort": "80"
					}
				]
			},
			"Type": "AWS::EC2::SecurityGroup"
		},
		"PublicSubnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": "10.0.0.0/24",
				"Tags": [{
					"Key": "Application",
					"Value": {
						"Ref": "AWS::StackId"
					}
				}]
			}
		},
		"InternetGateway": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {
				"Tags": [{
					"Key": "Application",
					"Value": {
						"Ref": "AWS::StackId"
					}
				}]
			}
		},
		"AttachGateway": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"InternetGatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"RouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
					"Key": "Application",
					"Value": {
						"Ref": "AWS::StackId"
					}
				}]
			}
		},
		"Route": {
			"Type": "AWS::EC2::Route",
			"DependsOn": "AttachGateway",
			"Properties": {
				"RouteTableId": {
					"Ref": "RouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"SubnetRouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PublicSubnet"
				},
				"RouteTableId": {
					"Ref": "RouteTable"
				}
			}
		},
		"NetworkAcl": {
			"Type": "AWS::EC2::NetworkAcl",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
					"Key": "Application",
					"Value": {
						"Ref": "AWS::StackId"
					}
				}]
			}
		},
		"SubnetNetworkAclAssociation": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PublicSubnet"
				},
				"NetworkAclId": {
					"Ref": "NetworkAcl"
				}
			}
		},
		"CMInstance": {
			"Properties": {
				"ImageId": {
					"Fn::FindInMap": [
						"RegionMap",
						{
							"Ref": "AWS::Region"
						},
						"AMI"
					]
				},
				"InstanceType": "t2.micro",
				"KeyName": {
					"Ref": "SSHKey"
				},
				"SecurityGroups": [{
					"Ref": "SecurityGroup"
				}],
				"UserData": {
					"Fn::Base64": {
						"Fn::Join": [
							"",
							[
								"#!/bin/bash\n",
								"yum update -y\n",
								"yum install epel-release -y\n",
								"yum install -y ansible git\n"
							]
						]
					}
				}
			},
			"Type": "AWS::EC2::Instance"
		}
	},
	"Outputs": {
		"VPCID": {
			"Value": {
				"Ref": "VPC"
			}
		},
		"PublicSubnetID": {
			"Value": {
				"Ref": "PublicSubnet"
			}
		}
	}
}
